my-helm-deploy/only-one-deploy/nginx-test/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: virtlet-ing
  namespace: argo-my-test
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: virtlet.com
    http:
      paths:
      - backend:
          serviceName: virtlet
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: virtlet-ing-preview
  namespace: argo-my-test
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: pre.virtlet.com
    http:
      paths:
      - backend:
          serviceName: virtlet-preview
          servicePort: 80
